fixed angular.json project name, added dynamic layout, and fixed excessive whitespace

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,22 +1,32 @@
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-    border-bottom: 1px solid black;
-    font-family: 'DM Serif Display', serif;
-  }
-  
+  display: flex;
+  justify-content: space-between; 
+  align-items: center;
+  border-bottom: 0.0625rem solid black;
+  font-family: 'DM Serif Display', serif;
+  width: 100%; 
+  margin: 0 auto; 
+  box-sizing: border-box; 
+  align-items: center;  
+}
+
 .logo {
-  font-size: 50pt;
-  margin-left: 45px;
+  margin-left: 10%; 
+  font-size: clamp(3rem, 6vw, 5rem);
+}
+
+nav {
+  align-items: center;  
+  display: flex;
+  gap: 2rem; 
+  padding-right: 7%;
 }
 
 nav a {
-  margin-left: 1.5rem;
+  margin: 0; 
   text-decoration: none;
   color: black;
-  font-size: 15pt;
+  font-size: clamp(0.75rem, 1vw, 2rem);
   font-family: 'Albert Sans';
 }
 
@@ -25,96 +35,27 @@ nav a {
   border: none;
   background-color: black;
   color: white;
-  font-size: 1rem;
-  border-radius: 30px;
+  font-size: 1.5rem; 
+  border-radius: 3rem;
   cursor: pointer;
   text-decoration: none;
-}
-
-h1 {
-  font-size: 2.5rem;
-  margin-bottom: 1rem;
-}
-
-p {
-  font-size: 1.2rem;
-  margin-bottom: 2rem;
-  color: black;
-  font-family: 'Albert Sans';
+  margin-left: 2rem; 
 }
 
 footer {
   display: flex;
   justify-content: space-around;
-  padding: 1rem 2rem;
-  border-top: 1px solid black;
-  margin-top: -10px;
+  padding: 1rem 0; 
+  border-top: 0.0625rem solid black;
+  width: 100%; 
+  box-sizing: border-box; 
+  position: relative;
+  bottom: 0;
 }
 
 footer a {
-  vertical-align: center;
   text-decoration: none;
   color: black;
-  font-size: 1rem;
+  font-size: clamp(0.75rem, 1vw, 2rem);
   justify-content: space-around;
-}
-
-.modal-backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 10;
-  font-family: 'Albert Sans';
-  text-align: center;
-}
-
-.modal {
-  background: white;
-  border-radius: 10px;
-  padding: 20px;
-  width: 700px;
-  height: 94vh;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  text-align: center;
-  display: flex;
-  flex-direction: column; 
-  justify-content: center; 
-  align-items: center; 
-}
-
-
-.modal h4 {
-  margin-bottom: 50px; 
-}
-
-.sign-in-option {
-  display: block;
-  width: 80%; 
-  max-width: 300px; 
-  margin: 10px 0;
-  padding: 10px;
-  font-size: 16px;
-  border: none;
-  border-radius: 30px;
-  background: white;
-  cursor: pointer;
-  transition: background 0.3s;
-  border: 1px solid black;
-}
-
-.sign-in-option:hover {
-  background: #e0e0e0;
-}
-
-.modal p {
-  margin-top: 20px;
-  font-size: 14px;
-  color: black;
-  text-align: center;
 }
